# cloud-images-downloader

./: Cargo.toml  LICENSE  README.md
resources/: indexes.json
src/: main.rs
src/cloud/: catalog.rs  image.rs  item.rs  mod.rs  product.rs  version.rs
src/debian/: mod.rs  models.rs
src/helpers/: mod.rs
src/helpers/fzf_invoker/: mod.rs
src/helpers/image_resolver/: mod.rs
src/repositories/: mod.rs  models.rs
src/repositories/almalinux/: mod.rs
src/repositories/debian/: mod.rs
src/repositories/ubuntu/: mod.rs
src/ubuntu/: mod.rs
