[package]
name = "rust-get-cloud-images"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.0"
regex = "1.12.2"
reqwest = { version = "0.12.23", features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
termenu = "2.3.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
